z-index fixed

--- a/src/styles/data-title-styles.css
+++ b/src/styles/data-title-styles.css
@@ -2,6 +2,7 @@
   opacity: 1;
   transition: all 0.1s ease 0.5s;
   visibility: visible;
+  z-index: 9999;
 }
 [data-title]:after {
   content: attr(data-title);
